--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodemailer-mock",
+  "name": "nodemailer-mock-pooled",
   "version": "1.5.0",
-  "description": "Mock nodemailer module for testing",
+  "description": "Mock nodemailer module for testing with pooled support",
   "main": "nodemailer-mock.js",
   "directories": {
     "lib": "./lib",
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/doublesharp/nodemailer-mock.git"
+    "url": "git+https://github.com/kevinjil/nodemailer-mock-pooled.git"
   },
   "keywords": [
     "nodemailer",
@@ -38,9 +38,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/doublesharp/nodemailer-mock/issues"
+    "url": "https://github.com/kevinjil/nodemailer-mock-pooled/issues"
   },
-  "homepage": "https://github.com/doublesharp/nodemailer-mock#readme",
+  "homepage": "https://github.com/kevinjil/nodemailer-mock-pooled#readme",
   "devDependencies": {
     "colors": "1.3.3",
     "depcheck": "0.7.2",
